WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226475
Fix thread safety issues in MediaElementAudioSourceNode
https://bugs.webkit.org/show_bug.cgi?id=226475
Summary
Fix thread safety issues in MediaElementAudioSourceNode
Chris Dumez
Reported
2021-05-31 17:21:25 PDT
Adopt thread safety analysis annotations in MediaElementAudioSourceNode and fix bugs found by clang.
Attachments
Patch
(4.61 KB, patch)
2021-05-31 17:24 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-05-31 17:24:45 PDT
Created
attachment 430218
[details]
Patch
EWS
Comment 2
2021-06-01 07:56:12 PDT
Committed
r278306
(
238343@main
): <
https://commits.webkit.org/238343@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430218
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-06-01 07:57:15 PDT
<
rdar://problem/78714387
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug