Fix thread safety issues in MediaElementAudioSourceNode https://bugs.webkit.org/show_bug.cgi?id=226475

Reviewed by Youenn Fablet.

Adopt thread safety analysis annotations in MediaElementAudioSourceNode and fix
bugs found by clang. In particular, the following issues were fixed:
- setFormat() was modifying m_muted / m_sourceNumberOfChannels / m_sourceSampleRate
  on the main thread without locking, even though those data members are accessed
  from the rendering thread.
- process() was accessing  m_muted / m_sourceNumberOfChannels / m_sourceSampleRate
  on the rendering thread *before* locking.

* Modules/webaudio/MediaElementAudioSourceNode.cpp:
(WebCore::MediaElementAudioSourceNode::setFormat):
(WebCore::MediaElementAudioSourceNode::process):
* Modules/webaudio/MediaElementAudioSourceNode.h:


Canonical link: https://commits.webkit.org/238343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278306 268f45cc-cd09-0410-ab3c-d52691b4dbfc